Shopping cart error when displaying resposive on mobile devices has been fixed

--- a/responsiv.css
+++ b/responsiv.css
@@ -1,11 +1,4 @@
-@media (min-with:1000px) {
-
-
-
-}
-
-
-@media (max-width: 1300px) {
+@media screen and (max-width: 1300px) {
 
     .info-footer {
         width: 100%;
@@ -13,15 +6,31 @@
 
 }
 
-@media (max-width: 1000px) {
+@media screen and (max-width: 1000px) {
+
+    header {
+        padding: 0px 10px 0px 10px;
+    }
+
     .left-container {
         width: 100%;
+        position: relative;
+        display: block;
+    }
+
+    .shopping-card {
+        display: none;
+    }
+
+    .left-container-mobile {
+        position: fixed !important;
     }
 
     .shopping-card-mobile {
-        position: absolute;
+        position: absolute !important;
+        display: block;
         width: 100%;
-        height: calc(100vh - (146px + 80px));
+        height: auto;
         top: 80px;
         left: 0;
         right: 0;
@@ -91,7 +100,7 @@
 }
 
 
-@media (max-width: 500px) {
+@media screen and (max-width: 500px) {
 
     .rastaurant-categories-container{
         display: none;
